<resources>
    <string name="app_name">Assignment-3</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_description">Description</string>
    <string name="add_title">Enter Title</string>
    <string name="desc_hint">Enter Description</string>
    <string name="date1_default">Thurs, Feb. 25, 2021</string>
    <string name="time_default">2:00 PM</string>
    <string name="location_hint">Add location</string>
    <string name="attendees_label">Attendees</string>
    <string name="reminder_label">Reminder</string>
    <string name="importance_label">Importance</string>

    <string-array name="category_options">
        <item>Select Category</item>
        <item>Personal</item>
        <item>Work</item>
        <item>School</item>
    </string-array>

    <string-array name="reminder_options">
        <item>5 minutes before</item>
        <item>15 minutes before</item>
        <item>30 minutes before</item>
    </string-array>

    <string-array name="importance_options">
        <item>Trivial</item>
        <item>Important</item>
        <item>Top Priority</item>
    </string-array>
    <string name="title_activity_list">ListActivity</string>
    <string name="list_label">Overview</string>
    <string name="personal_tab_label">Personal</string>
    <string name="work_tab">Work</string>
    <string name="school_tab_label">School</string>
    <string name="add_label">New Meeting</string>
    <string name="button_save">Save</string>

</resources>