<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <com.google.android.material.tabs.TabLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/personal_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_tab_label" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/work_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/work_tab" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/school_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/school_tab_label" />
    </com.google.android.material.tabs.TabLayout>
</androidx.constraintlayout.widget.ConstraintLayout>