<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/addTitleLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/inputSide_margins"
                    android:layout_marginLeft="@dimen/inputSide_margins"
                    android:layout_marginTop="@dimen/labelTop_margin"
                    android:layout_marginEnd="@dimen/inputSide_margins"
                    android:layout_marginRight="@dimen/inputSide_margins"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addTitleEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_title"
                        android:imeOptions="actionDone"
                        android:inputType="textCapWords" />

                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:id="@+id/seperator1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/labelTop_margin"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/addTitleLayout" />

                <Spinner
                    android:id="@+id/categorySpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/inputSide_margins"
                    android:layout_marginLeft="@dimen/inputSide_margins"
                    android:layout_marginTop="@dimen/labelTop_margin"
                    android:layout_marginEnd="@dimen/inputSide_margins"
                    android:layout_marginRight="@dimen/inputSide_margins"
                    android:layout_weight="1"
                    android:entries="@array/category_options"
                    android:minHeight="48dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/seperator1" />

                <View
                    android:id="@+id/seperator2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/labelTop_margin"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/categorySpinner" />/>

                <TextView
                    android:id="@+id/addDescLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/inputSide_margins"
                    android:layout_marginLeft="@dimen/inputSide_margins"
                    android:layout_marginTop="@dimen/labelTop_margin"
                    android:text="@string/add_description"
                    android:textSize="@dimen/h1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/seperator2" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/descriptionLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="@dimen/inputTop_margin"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/addDescLabel">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/description_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/desc_hint"
                        android:imeOptions="actionDone"
                        android:inputType="textCapWords" />
                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:id="@+id/seperator3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/labelTop_margin"
                    android:layout_weight="1"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/descriptionLayout" />

                <TextView
                    android:id="@+id/startDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/inputSide_margins"
                    android:layout_marginLeft="@dimen/inputSide_margins"
                    android:layout_marginTop="@dimen/labelTop_margin"
                    android:text="@string/date1_default"
                    android:textSize="@dimen/h2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/seperator3" />

                <TextView
                    android:id="@+id/startTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/labelTop_margin"
                    android:layout_marginEnd="124dp"
                    android:layout_marginRight="124dp"
                    android:text="@string/time_default"
                    android:textSize="@dimen/h2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/startDate"
                    app:layout_constraintTop_toBottomOf="@+id/seperator3" />

                <TextView
                    android:id="@+id/endTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="124dp"
                    android:layout_marginRight="124dp"
                    android:text="@string/time_default"
                    android:textSize="@dimen/h2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/endDate"
                    app:layout_constraintTop_toBottomOf="@+id/startTime" />

                <TextView
                    android:id="@+id/endDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/inputSide_margins"
                    android:layout_marginLeft="@dimen/inputSide_margins"
                    android:layout_marginTop="24dp"
                    android:text="@string/date1_default"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/startDate"
                    android:textSize="@dimen/h2"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/locationLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/inputSide_margins"
                    android:layout_marginLeft="@dimen/inputSide_margins"
                    android:layout_marginTop="@dimen/labelTop_margin"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/endDate">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/location_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/location_hint"
                        android:imeOptions="actionDone"
                        android:inputType="textCapWords" />
                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:id="@+id/seperator4"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:layout_marginTop="@dimen/labelTop_margin"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/locationLayout" />

                <TextView
                    android:id="@+id/attendees_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/labelTop_margin"
                    android:layout_marginLeft="24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    android:textSize="@dimen/h1"
                    android:text="@string/attendees_label"
                    app:layout_constraintTop_toBottomOf="@id/seperator4"/>

                <ImageButton
                    android:id="@+id/attendees_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@android:drawable/ic_menu_add"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="@dimen/inputTop_margin"
                    app:layout_constraintTop_toBottomOf="@id/attendees_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"/>

                <View
                    android:id="@+id/seperator5"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/labelTop_margin"
                    android:layout_weight="1"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/attendees_button" />

                <TextView
                    android:id="@+id/reminder_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reminder_label"
                    android:textSize="@dimen/h1"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="@dimen/labelTop_margin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/seperator5"
                    app:layout_constraintHorizontal_bias="0.0"/>

                <Spinner
                    android:id="@+id/reminder_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="12dp"
                    android:entries="@array/reminder_options"
                    android:minHeight="48dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/reminder_label" />

                <TextView
                    android:id="@+id/importance_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/importance_label"
                    android:textSize="@dimen/h1"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="@dimen/h1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/reminder_spinner"
                    app:layout_constraintHorizontal_bias="0.0"/>

                <Spinner
                    android:id="@+id/importanceSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="12dp"
                    android:entries="@array/importance_options"
                    android:minHeight="48dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/importance_label" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>